# zenritme

./: .codespellrc  .gitignore  .yamllint  BRANDING.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md  RULES.md  TRADEMARK.md  build.rs  build.sh  worklog.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs-ci.yml  maintenance.yml  release.yml
assets/sounds/: README.md
completions/: zenritme.bash  zenritme.fish  zenritme.zsh
docs/: BRANDING.md  ENDURANCE.md  LONG_USAGE_REPORT.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  VERIFY_RELEASE.md
man/: zenritme.1
scripts/: build.sh  check-loc.sh  doctor.sh  endurance-smoke.sh  generate-sounds.py  install.sh  uninstall.sh  version-to.sh
src/: animation.rs  cli.rs  engine.rs  main.rs  mode.rs  path_guard.rs  render.rs  sound.rs  terminal.rs  theme.rs  update.rs  version.rs
src/cli/: duration.rs  mod.rs  pomodoro.rs  suggest.rs
src/render/: labels.rs  layout.rs  mod.rs  progress.rs  views.rs
src/sound/: assets.rs  cleanup.rs  cooldown.rs  mod.rs  playback.rs  resolve.rs
